# tunebank

./: .gitignore  README.md  package.yaml  stack.yaml  tunebank.cabal
conf/: tunebank-test.conf  tunebank-tests.conf  tunebank.conf
src/: Main.hs
src/Tunebank/: ApiType.hs  Class.hs  Config.hs  Server.hs  Types.hs
src/Tunebank/Authentication/: BasicAuth.hs
src/Tunebank/DB/: Api.hs  Class.hs  CommentHelper.hs  TuneHelper.hs  UserHelper.hs
src/Tunebank/DBHelper/: Comment.hs  Tune.hs  User.hs
src/Tunebank/Email/: Client.hs
src/Tunebank/Model/: AbcMetadata.hs  AbcMetadataSubmission.hs  Comment.hs  CommentSubmission.hs  Genre.hs  NewTune.hs  NewUser.hs  Pagination.hs  TuneRef.hs  TuneText.hs  User.hs  UserRegistration.hs
src/Tunebank/TestData/: AbcMetadata.hs  AbcTune.hs  Comment.hs  User.hs
src/Tunebank/TypeConversion/: Cache.hs  Transcode.hs
src/Tunebank/Utils/: HTTPErrors.hs  Timestamps.hs
tests/: ApiTests.hs  CommentApiTests.hs  MetadataTests.hs  TestData.hs  TestsMain.hs  TranscodingTests.hs  TuneApiTests.hs  UserApiTests.hs
tests/Mock/: DBState.hs  MockBasicAuth.hs  MockComment.hs  MockTune.hs  MockUser.hs
